# Spot-Classification-and-Analysis-Tool

./: .gitignore  README.md  WORKFLOW.md  pyproject.toml  test_import_time.py
scat/: __init__.py  analyzer.py  classifier.py  cli.py  config.py  detector.py  features.py  labeling_gui.py  main_gui.py  report.py  segmentation.py  spatial.py  statistics.py  trainer.py  ui_common.py  visualization.py
scripts/: build.spec  cleanup.ps1  launcher.py
